--- a/app/views/layouts/feedpieces/_feedcontent.html.erb
+++ b/app/views/layouts/feedpieces/_feedcontent.html.erb
@@ -1,31 +1,71 @@
-<a href="<%= named_binder_route(@f[:model]) %>" class="conlink">
-	<div class="thecontent">
-		<% if @g[:model].type==1 %>
+<% if !@f[:array] %>
 
-			<% imgarr = Binder.get_folder_array(@g[:model].id.to_s) %>
+	<a href="<%= named_binder_route(@f[:model]) %>" class="conlink">
+		<div class="thecontent">
+			<% if @f[:model].type==1 %>
 
-			<div style="float:left; margin-right: 10px;">
-				<div style="height:122px;width:180px;display:block;overflow:hidden;position:relative;">
-					<img src=<%= imgarr[0] %> />
+				<% imgarr = Binder.get_folder_array(@f[:model].id.to_s) %>
+
+				<div style="float:left; margin-right: 10px;">
+					<div style="height:122px;width:180px;display:block;overflow:hidden;position:relative;">
+						<img src=<%= imgarr[0] %> />
+					</div>
+
+					<img style="height:48px;width:55px;overflow:hidden;margin-top:4px;border:1px solid #EEE;" src=<%= (imgarr[1].nil? || imgarr[1].empty?) ? "/assets/common/nothumb.png" : imgarr[1] %> />
+					<img style="height:48px;width:55px;overflow:hidden;margin-top:4px;border:1px solid #EEE;" src=<%= (imgarr[2].nil? || imgarr[2].empty?) ? "/assets/common/nothumb.png" : imgarr[2] %> />
+					<img style="height:48px;width:55px;overflow:hidden;margin-top:4px;border:1px solid #EEE;" src=<%= (imgarr[3].nil? || imgarr[3].empty?) ? "/assets/common/nothumb.png" : imgarr[3] %> />
+
 				</div>
 
-				<img style="height:48px;width:55px;overflow:hidden;margin-top:4px;border:1px solid #EEE;" src=<%= (imgarr[1].nil? || imgarr[1].empty?) ? "/assets/common/nothumb.png" : imgarr[1] %> />
-				<img style="height:48px;width:55px;overflow:hidden;margin-top:4px;border:1px solid #EEE;" src=<%= (imgarr[2].nil? || imgarr[2].empty?) ? "/assets/common/nothumb.png" : imgarr[2] %> />
-				<img style="height:48px;width:55px;overflow:hidden;margin-top:4px;border:1px solid #EEE;" src=<%= (imgarr[3].nil? || imgarr[3].empty?) ? "/assets/common/nothumb.png" : imgarr[3] %> />
-
-			</div>
-
-		<% else %>
-			<% if !@g[:model].current_version.nil? && @g[:model].current_version.imgstatus["img_thumb_lg"]["generated"] %>
-				<div class="previmg" style="background-image: url('<%= @g[:model].current_version.img_thumb_lg.url %>');background-repeat: no-repeat;background-position: center;"></div>
+			<% else %>
+				<% if !@f[:model].current_version.nil? && @f[:model].current_version.imgstatus["img_thumb_lg"]["generated"] %>
+					<div class="previmg" style="background-image: url('<%= @f[:model].current_version.img_thumb_lg.url %>');background-repeat: no-repeat;background-position: center;"></div>
+				<% end %>
 			<% end %>
-		<% end %>
-		<div class="txtcon">
-			<div class="contitle"><%= @g[:model].title %></div>
-			<div class="condesc">
-				<%= truncate(strip_tags(@g[:model].body), :length => 250, :omission => "... <u>see more</u>").html_safe %>
+			<div class="txtcon">
+				<div class="contitle"><%= @f[:model].title %></div>
+				<div class="condesc">
+					<%= truncate(strip_tags(@f[:model].body), :length => 250, :omission => "... <u>see more</u>").html_safe %>
+				</div>
 			</div>
+			<div style="clear:both"></div>
 		</div>
-		<div style="clear:both"></div>
-	</div>
-</a>
+	</a>
+
+<% else %>
+
+	<% @f[:array].each do |g| %>
+
+	<a href="<%= named_binder_route(g[:model]) %>" class="conlink">
+		<div class="thecontent">
+			<% if g[:model].type==1 %>
+
+				<% imgarr = Binder.get_folder_array(g[:model].id.to_s) %>
+
+				<div style="float:left; margin-right: 10px;">
+					<div style="height:122px;width:180px;display:block;overflow:hidden;position:relative;">
+						<img src=<%= imgarr[0] %> />
+					</div>
+
+					<img style="height:48px;width:55px;overflow:hidden;margin-top:4px;border:1px solid #EEE;" src=<%= (imgarr[1].nil? || imgarr[1].empty?) ? "/assets/common/nothumb.png" : imgarr[1] %> />
+					<img style="height:48px;width:55px;overflow:hidden;margin-top:4px;border:1px solid #EEE;" src=<%= (imgarr[2].nil? || imgarr[2].empty?) ? "/assets/common/nothumb.png" : imgarr[2] %> />
+					<img style="height:48px;width:55px;overflow:hidden;margin-top:4px;border:1px solid #EEE;" src=<%= (imgarr[3].nil? || imgarr[3].empty?) ? "/assets/common/nothumb.png" : imgarr[3] %> />
+
+				</div>
+
+			<% else %>
+				<% if !g[:model].current_version.nil? && g[:model].current_version.imgstatus["img_thumb_lg"]["generated"] %>
+					<div class="previmg" style="background-image: url('<%= g[:model].current_version.img_thumb_lg.url %>');background-repeat: no-repeat;background-position: center;"></div>
+				<% end %>
+			<% end %>
+			<div class="txtcon">
+				<div class="contitle"><%= g[:model].title %></div>
+				<div class="condesc">
+					<%= truncate(strip_tags(g[:model].body), :length => 250, :omission => "... <u>see more</u>").html_safe %>
+				</div>
+			</div>
+			<div style="clear:both"></div>
+		</div>
+	</a>
+	<% end %>
+<% end %>
