fixed self naming issue in teacher activity feed

--- a/app/views/layouts/feedpieces/_favoriteheader.html.erb
+++ b/app/views/layouts/feedpieces/_favoriteheader.html.erb
@@ -1,7 +1,7 @@
 <% if !@f[:array] %>
 
 	<div class="thetitle">
-		<% if !current_teacher.nil? && current_teacher.id.to_s==@f[:owner].id.to_s %>
+		<% if @teacher_activity.nil? || (!current_teacher.nil? && current_teacher.id.to_s==@f[:owner].id.to_s) %>
 			You favorited <a href="<%= named_binder_route(@f[:model]) %>"><%= @f[:model].title %></a> <%= time_ago_in_words(Time.at(@f[:log]['timestamp']).to_datetime) %> ago.
 		<% else %>
 			<a href="<%= "/#{@f[:owner].username}" %>"><%= "#{@f[:owner].fname} #{@f[:owner].lname}" %></a> favorited <a href="<%= named_binder_route(@f[:model]) %>"><%= @f[:model].title  %></a> <%= time_ago_in_words(Time.at(@f[:log]['timestamp']).to_datetime) %> ago.
@@ -11,7 +11,7 @@
 <% else %>
 
 	<div class="thetitle">
-		<% if !current_teacher.nil? && current_teacher.id.to_s==@f[:owner].id.to_s %>
+		<% if @teacher_activity.nil? || (!current_teacher.nil? && current_teacher.id.to_s==@f[:owner].id.to_s) %>
 			You favorited <%= @f[:array].size %> resources <%= time_ago_in_words(Time.at(@f[:log]['timestamp']).to_datetime) %> ago.
 		<% else %>
 			<a href="<%= "/#{@f[:owner].username}" %>"><%= "#{@f[:owner].fname} #{@f[:owner].lname}" %></a> favorited <%= @f[:array].size %> resources <%= time_ago_in_words(Time.at(@f[:log]['timestamp']).to_datetime) %> ago.
