--- a/app/views/layouts/feedpieces/_createfileheader.html.erb
+++ b/app/views/layouts/feedpieces/_createfileheader.html.erb
@@ -1,7 +1,7 @@
 <% if !@f[:array] %>
 
 	<div class="thetitle">
-		<% if !current_teacher.nil? && current_teacher.id.to_s==@f[:owner].id.to_s %>
+		<% if @teacher_activity.nil? || (!current_teacher.nil? && current_teacher.id.to_s==@f[:owner].id.to_s) %>
 			You added a file to <a href="<%= @f[:model].parents.size==2 ? named_binder_route(Binder.find(@f[:model].parent['id'])) : named_binder_route(Binder.find(@f[:model].parents[1]['id'])) %>"><%= @f[:model].parents.size==2 ? @f[:model].parents[1]["title"] : @f[:model].parent['title'] %></a> <%= time_ago_in_words(Time.at(@f[:log]['timestamp']).to_datetime) %> ago.
 		<% else %>
 			<a href="<%= "/#{@f[:owner].username}" %>"><%= "#{@f[:owner].fname} #{@f[:owner].lname}" %></a> added a file to <a href="<%= @f[:model].parents.size==2 ? named_binder_route(Binder.find(@f[:model].parent['id'])) : named_binder_route(Binder.find(@f[:model].parents[1]['id'])) %>"><%= @f[:model].parents.size==2 ? @f[:model].parents[1]["title"] : @f[:model].parent['title'] %></a> <%= time_ago_in_words(Time.at(@f[:log]['timestamp']).to_datetime) %> ago.
@@ -11,7 +11,7 @@
 <% else %>
 
 	<div class="thetitle">
-		<% if !current_teacher.nil? && current_teacher.id.to_s==@f[:owner].id.to_s %>
+		<% if @teacher_activity.nil? || (!current_teacher.nil? && current_teacher.id.to_s==@f[:owner].id.to_s) %>
 			You added <%= @f[:array].size %> files to <a href="<%= @f[:model].parents.size==2 ? named_binder_route(Binder.find(@f[:model].parent['id'])) : named_binder_route(Binder.find(@f[:model].parents[1]['id'])) %>"><%= @f[:model].parents.size==2 ? @f[:model].parents[1]["title"] : @f[:model].parent['title'] %></a> <%= time_ago_in_words(Time.at(@f[:log]['timestamp']).to_datetime) %> ago.
 		<% else %>
 			<a href="<%= "/#{@f[:owner].username}" %>"><%= "#{@f[:owner].fname} #{@f[:owner].lname}" %></a> added <%= @f[:array].size %> files to <a href="<%= @f[:model].parents.size==2 ? named_binder_route(Binder.find(@f[:model].parent['id'])) : named_binder_route(Binder.find(@f[:model].parents[1]['id'])) %>"><%= @f[:model].parents.size==2 ? @f[:model].parents[1]["title"] : @f[:model].parent['title'] %></a> <%= time_ago_in_words(Time.at(@f[:log]['timestamp']).to_datetime) %> ago.
