--- a/app/views/layouts/feedpieces/_subheader.html.erb
+++ b/app/views/layouts/feedpieces/_subheader.html.erb
@@ -3,7 +3,7 @@
 	<% @subscribee = Teacher.where(:username => /^#{Regexp.escape(f[:log].params['username'].to_s)}$/i).first %>
 
 	<div class="thetitle">
-		<% if !current_teacher.nil? && current_teacher.id.to_s==@f[:owner].id.to_s %>
+		<% if @teacher_activity.nil? || (!current_teacher.nil? && current_teacher.id.to_s==@f[:owner].id.to_s) %>
 			You subscribed to <a href="<%= "/#{@subscribee.username}" %>"><%= "#{@subscribee.fname} #{@subscribee.lname}" %></a> <%= time_ago_in_words(Time.at(@f[:log]['timestamp']).to_datetime) %> ago.
 		<% else %>
 			<a href="<%= "/#{@f[:owner].username}" %>"><%= "#{@f[:owner].fname} #{@f[:owner].lname}" %></a> subscribed to <a href="<%= "/#{@subscribee.username}" %>"><%= "#{@subscribee.fname} #{@subscribee.lname}" %></a> <%= time_ago_in_words(Time.at(@f[:log]['timestamp']).to_datetime) %> ago.
@@ -13,7 +13,7 @@
 <% else %>
 
 	<div class="thetitle">
-		<% if !current_teacher.nil? && current_teacher.id.to_s==@f[:owner].id.to_s %>
+		<% if @teacher_activity.nil? || (!current_teacher.nil? && current_teacher.id.to_s==@f[:owner].id.to_s) %>
 			You subscribed to <%= @f[:array].size %> educators <%= time_ago_in_words(Time.at(@f[:log]['timestamp']).to_datetime) %> ago.
 		<% else %>
 			<a href="<%= "/#{@f[:owner].username}" %>"><%= "#{@f[:owner].fname} #{@f[:owner].lname}" %></a> subscribed to <%= @f[:array].size %> educators <%= time_ago_in_words(Time.at(@f[:log]['timestamp']).to_datetime) %> ago.
