--- a/app/views/layouts/feedpieces/_feedcontent.html.erb
+++ b/app/views/layouts/feedpieces/_feedcontent.html.erb
@@ -6,16 +6,24 @@
 
 				<% imgarr = Binder.get_folder_array(@f[:model].id.to_s) %>
 
+				<% if !imgarr[0].nil? && !imgarr[0].empty? && !imgarr[0]=="/" %>
+
 				<div style="float:left; margin-right: 10px;">
 					<div style="height:122px;width:180px;display:block;overflow:hidden;position:relative;">
 						<img src=<%= imgarr[0] %> />
 					</div>
 
-					<img style="height:48px;width:55px;overflow:hidden;margin-top:4px;border:1px solid #EEE;" src=<%= (imgarr[1].nil? || imgarr[1].empty?) ? "/assets/common/nothumb.png" : imgarr[1] %> />
+					<% if !imgarr[1].nil? && !imgarr[1].empty? && !imgarr[1]=="/" %>
+
+					<img style="height:48px;width:55px;overflow:hidden;margin-top:4px;border:1px solid #EEE;" src=<%= imgarr[1] %> />
 					<img style="height:48px;width:55px;overflow:hidden;margin-top:4px;border:1px solid #EEE;" src=<%= (imgarr[2].nil? || imgarr[2].empty?) ? "/assets/common/nothumb.png" : imgarr[2] %> />
 					<img style="height:48px;width:55px;overflow:hidden;margin-top:4px;border:1px solid #EEE;" src=<%= (imgarr[3].nil? || imgarr[3].empty?) ? "/assets/common/nothumb.png" : imgarr[3] %> />
 
+					<% end %>
+
 				</div>
+
+				<% end %>
 
 			<% else %>
 				<% if !@f[:model].current_version.nil? && @f[:model].current_version.imgstatus["img_thumb_lg"]["generated"] %>
@@ -42,16 +50,24 @@
 
 				<% imgarr = Binder.get_folder_array(g[:model].id.to_s) %>
 
+				<% if !imgarr[0].nil? && !imgarr[0].empty? && !imgarr[0]=="/" %>
+
 				<div style="float:left; margin-right: 10px;">
 					<div style="height:122px;width:180px;display:block;overflow:hidden;position:relative;">
 						<img src=<%= imgarr[0] %> />
 					</div>
 
-					<img style="height:48px;width:55px;overflow:hidden;margin-top:4px;border:1px solid #EEE;" src=<%= (imgarr[1].nil? || imgarr[1].empty?) ? "/assets/common/nothumb.png" : imgarr[1] %> />
+					<% if !imgarr[1].nil? && !imgarr[1].empty? && !imgarr[1]=="/" %>
+
+					<img style="height:48px;width:55px;overflow:hidden;margin-top:4px;border:1px solid #EEE;" src=<%= imgarr[1] %> />
 					<img style="height:48px;width:55px;overflow:hidden;margin-top:4px;border:1px solid #EEE;" src=<%= (imgarr[2].nil? || imgarr[2].empty?) ? "/assets/common/nothumb.png" : imgarr[2] %> />
 					<img style="height:48px;width:55px;overflow:hidden;margin-top:4px;border:1px solid #EEE;" src=<%= (imgarr[3].nil? || imgarr[3].empty?) ? "/assets/common/nothumb.png" : imgarr[3] %> />
 
+					<% end %>
+
 				</div>
+
+				<% end %>
 
 			<% else %>
 				<% if !g[:model].current_version.nil? && g[:model].current_version.imgstatus["img_thumb_lg"]["generated"] %>
