--- a/app/assets/stylesheets/binders/folder.css
+++ b/app/assets/stylesheets/binders/folder.css
@@ -372,8 +372,8 @@
      -moz-border-radius: 4px;
           border-radius: 4px;
 
-  -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);  
-  -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);  
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2), inset 0 0 4px rgba(0, 0, 0, 0.9);  
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2), inset 0 0 4px rgba(0, 0, 0, 0.9);  
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2), inset 0 0 4px rgba(0, 0, 0, 0.9); 
 }
 
