--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -3,3 +3,5 @@
 
 <a href="/admin/viewapps">View Applicants</a><br />
 <a href="/admin/viewusers">View Users</a>
+<a href="/admin/fpfeatured">Pick Front Page Binders</a>
+<a href="/admin/featured">Pick Featured Binders</a>
