Missing thumbnails placers

--- a/app/views/layouts/_contentlist.html.erb
+++ b/app/views/layouts/_contentlist.html.erb
@@ -24,7 +24,7 @@
 	                    # is a file/link 
 	                 %> 
 
-					<% if get_binder_image(binder) == "<no image>" %>
+					<% if get_binder_image(binder) == "<no image>" || get_binder_image(binder) == "/assets/placer.png" %>
 
 	                  	<div class="folder-preview">
 							<div class="contype">
