--- a/app/views/home/united.html.erb
+++ b/app/views/home/united.html.erb
@@ -29,13 +29,56 @@
 		<div class="exp">
 		The problem is that finding the time to create all this incredible content and having the energy to teach it is impossible if we play by the old rules.<br /><br />
 
-		<strong>Technology and the internet have changed the game.</strong> Now, for the first time ever, you can work collaboratively with teachers from around the world to build lessons. This gives you more time & energy to focus on what you do best — teaching and inspiring your students. The ideas you contribute will also help thousands of teachers and immediately impact the education of students around the world.<br /><br />
+		<strong>Technology and the internet have changed the game.</strong> Now, for the first time ever, you can work collaboratively with teachers from around the world to build lessons. This gives you more time & energy to focus on what you do best — teaching and inspiring your students. Plus, the ideas you contribute will have an immediate effect on students and teachers globally.<br /><br />
 
 		Every once in a while, a group of pioneers stray from the well-worn path and create the future. This is happening in education <u>right now</u>. Join the tens of thousands of teachers from around the world that are celebrating each other's unique ideas and lets leave education with something really beautiful.
+		</div>
+
+		<a href="/apply" id="joinbtn" class="btn btn-medium btn-success">Join the movement</a>
+
+		<div class="sharelinks">
+<iframe allowtransparency="true" frameborder="0" scrolling="no" src="http://platform.twitter.com/widgets/tweet_button.1347008535.html#_=1347154948474&amp;count=none&amp;id=twitter-widget-0&amp;lang=en&amp;original_referer=http%3A%2F%2Flocalhost%3A5000%2Funitedweteach&amp;size=m&amp;text=Just%20joined%20the%20%23UnitedWeTeach%20movement%20%3A)&amp;url=http%3A%2F%2Fwww.claco.com%2Funitedweteach" class="twitter-share-button twitter-count-none" style="width: 56px; height: 20px; margin-bottom:12px;padding-right:10px;border-right:1px solid #ccc; margin-right:10px" title="Twitter Tweet Button" data-twttr-rendered="true"></iframe>
+
+<iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.claco.com%2Funitedweteach&amp;send=false&amp;layout=standard&amp;width=350&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=35" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:260px; height:35px;" allowTransparency="true"></iframe>
 		</div>
 
 
 
 		<div style="clear:both"></div>
+
+
+
+
+
+		<div class="divvr">
+			<div class="lineleft"></div>
+			<div class="heart">♥</div>
+			<div class="lineright"></div>
+			<div style="clear:both"></div>
+		</div>
+
+
+		<div class="imgr mid">
+			<%= image_tag('public/uwt/2.jpg', :style => "width:250px") %>
+		</div>
+
+		<div class="imgr mid">
+			<%= image_tag('public/uwt/3.jpg', :style => "width:250px") %>
+		</div>
+
+		<div class="imgr mid">
+			<%= image_tag('public/uwt/1.jpg', :style => "width:250px") %>
+		</div>
+
+		<div style="clear:both;"></div>
+
+
+		<div class="imgr" style="width:835px;margin-left:20px;margin-top:20px">
+			<%= image_tag('public/uwt/errbody.jpg', :style => "width:835px") %>
+		</div>
+
+
+
+
 	</div>
 </div>
