--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,15 @@ footer {
   color:#666;
 }
 
+.publink {
+  font-weight:bolder;
+  color:#fff !important;
+}
+
+.publink:hover{
+  text-decoration: underline !important;
+}
+
 .menusplitter {
   width:1px;
   height:30px;
