--- a/app/assets/stylesheets/strap.css
+++ b/app/assets/stylesheets/strap.css
@@ -2834,18 +2834,19 @@ button.close {
 }
 
 .btn-success {
-  background-color: #5bb75b;
-  *background-color: #51a351;
-  background-image: -ms-linear-gradient(top, #62c462, #51a351);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#62c462), to(#51a351));
-  background-image: -webkit-linear-gradient(top, #62c462, #51a351);
-  background-image: -o-linear-gradient(top, #62c462, #51a351);
-  background-image: -moz-linear-gradient(top, #62c462, #51a351);
-  background-image: linear-gradient(top, #62c462, #51a351);
+  color:#fff !important;
+  text-shadow: 0 1px 0 #555 !important;
+  background-color: #649F2C;
+  *background-color: #649F2C;
+  background-image: -ms-linear-gradient(top, #B3D330, #649F2C);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#B3D330), to(#649F2C));
+  background-image: -webkit-linear-gradient(top, #B3D330, #649F2C);
+  background-image: -o-linear-gradient(top, #B3D330, #649F2C);
+  background-image: -moz-linear-gradient(top, #B3D330, #649F2C);
+  background-image: linear-gradient(top, #B3D330, #649F2C);
   background-repeat: repeat-x;
-  border-color: #51a351 #51a351 #387038;
-  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#62c462', endColorstr='#51a351', GradientType=0);
+  border-color: rgba(133, 160, 31, 0.99) rgba(107, 140, 46, 0.99) rgba(78, 120, 138, 0.99);
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#B3D330', endColorstr='#649F2C', GradientType=0);
   filter: progid:dximagetransform.microsoft.gradient(enabled=false);
 }
 
@@ -2854,13 +2855,13 @@ button.close {
 .btn-success.active,
 .btn-success.disabled,
 .btn-success[disabled] {
-  background-color: #51a351;
-  *background-color: #499249;
+  background-color: #649F2C;
+  *background-color: #649F2C;
 }
 
 .btn-success:active,
 .btn-success.active {
-  background-color: #408140 \9;
+  background-color: #649F2C \9;
 }
 
 .btn-info {
