--- a/app/views/home/_public.html.erb
+++ b/app/views/home/_public.html.erb
@@ -15,7 +15,7 @@
 				Find, build and share educational resources with great educators just like you — aligned with <%= image_tag('public/core.png', :style => "margin: -2px 3px 0 0;width:130px") %>
 
 				<div style="margin-top:20px;margin-bottom:5px;height:50px">
-					<a href="#" style="position:absolute;padding:15px 15px 15px 30px;text-decoration:underline">Learn more</a>
+					<a href="/about" style="position:absolute;padding:15px 15px 15px 30px;text-decoration:underline">Learn more</a>
 					<a href="/apply" id="apply-btn" class="btn" style="float:right">We're in beta - request an invite!</a>
 				</div>
 
