--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -61,7 +61,13 @@
 
           <% else %>
 
+
+
             <ul class="nav nav-pills pull-right">
+              <li><a href="/" class="publink">Home</a></li>
+              <li><a href="/about" class="publink">About</a></li>
+              <li><a href="/unitedweteach" class="publink">#UnitedWeTeach</a></li>
+
               <li class="dropdown">
 
                 <button data-toggle="dropdown" class="btn top-notch-btn notch-login">Sign in</button>
