--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -2,6 +2,6 @@
 <h2><%= params[:controller] %>#<%= params[:action] %></h2>
 
 <a href="/admin/viewapps">View Applicants</a><br />
-<a href="/admin/viewusers">View Users</a>
-<a href="/admin/fpfeatured">Pick Front Page Binders</a>
+<a href="/admin/viewusers">View Users</a><br />
+<a href="/admin/fpfeatured">Pick Front Page Binders</a><br />
 <a href="/admin/featured">Pick Featured Binders</a>
