--- a/app/views/home/_loggedin.html.erb
+++ b/app/views/home/_loggedin.html.erb
@@ -74,11 +74,17 @@
 
 		</div>
 
-<div style="height:100px;margin-left:25px">
+<div style="height:70px;margin-left:25px">
 		<button id="newbinder">
 			Create a new binder
 		</button>
 </div>
+
+
+
+<div class="announcer invitebox">0/5 Invites Used <a href="#" style="float:right" onclick="jQuery.facebox({ ajax: '/invite' });return false">Send invites</a></div>
+ <br />
+
 
 <% if false %>
 		<div style="margin-top:30px;font-size:13px; font-weight:bolder">
