--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -14,15 +14,16 @@
 		<div class="sectr">
 
 			<div class="imgbox" style="float:left;margin-right:30px">
-				<%= image_tag('public/product/new.png', :style => "") %>
+				<%= image_tag('public/product/prof1.png', :style => "") %>
 			</div>
 
-			<div class="text">
+			<div class="text" style="margin-top:60px">
 				<div class="headtext">
 					Collaborate with educators across the hall or across the globe.
 				</div>
 
-				Find the best educators or bring along your own.
+				Find Common Core lessons from awesome educators just like you and contribute your own. You can even work on lessons with other teachers in real time - let the collaboration begin!
+
 			</div>
 
 
@@ -35,15 +36,15 @@
 		<div class="sectr">
 
 			<div class="imgbox" style="float:right;margin-left:30px">
-				<%= image_tag('public/product/new.png', :style => "") %>
+				<%= image_tag('public/product/binder.png', :style => "") %>
 			</div>
 
-			<div class="text">
+			<div class="text" style="margin-top:70px;padding-left:10px">
 				<div class="headtext">
 					One place to store all of your resources.
 				</div>
 
-				Find the best educators or bring along your own.
+				Bookmarking, file sharing, and various other sites are a hassle to store class materials in. Claco allows you to store, and easily access, all of your websites, videos, files & more all in one place. You can even align resources with the <%= image_tag('public/core.png', :style => "margin: -2px 3px 0 0;width:130px") %>.
 			</div>
 
 
@@ -56,15 +57,15 @@
 		<div class="sectr">
 
 			<div class="imgbox" style="float:left;margin-right:30px">
-				<%= image_tag('public/product/new.png', :style => "") %>
+				<%= image_tag('public/product/share2.png', :style => "") %>
 			</div>
 
-			<div class="text">
+			<div class="text" style="margin-top:50px">
 				<div class="headtext">
 					One click to share with students, parents, and colleagues.
 				</div>
 
-				Find the best educators or bring along your own.
+				Sending large email attachments or uploading to a site every time you want to share cool resources with someone is a pain. With your materials already in one place, sharing with anyone and everyone takes no more than the click of a button!
 			</div>
 
 
