--- a/app/views/home/united.html.erb
+++ b/app/views/home/united.html.erb
@@ -22,7 +22,7 @@
 	<div class="whitebox">
 
 		<div class="twitleft">
-			<script charset="utf-8" src="http://widgets.twimg.com/j/2/widget.js"></script><script>new TWTR.Widget({ version: 2, type: 'search', search: '#UnitedWeTeach', interval: 3000, title: 'ClassConnect', subject: '#UnitedWeTeach', width: 200, height: 180, theme: { shell: { background: '#424242', color: '#ffffff' }, tweets: { background: '#ffffff', color: '#444444', links: '#1985b5' } }, features: { scrollbar: false, loop: true, live: true, behavior: 'default' }
+			<script charset="utf-8" src="http://widgets.twimg.com/j/2/widget.js"></script><script>new TWTR.Widget({ version: 2, type: 'search', search: '#UnitedWeTeach', interval: 3000, title: 'Claco', subject: '#UnitedWeTeach', width: 200, height: 180, theme: { shell: { background: '#424242', color: '#ffffff' }, tweets: { background: '#ffffff', color: '#444444', links: '#1985b5' } }, features: { scrollbar: false, loop: true, live: true, behavior: 'default' }
 }).render().start();</script>
 		</div>
 
