--- a/app/views/home/team.html.erb
+++ b/app/views/home/team.html.erb
@@ -1,5 +1,5 @@
 <% content_for :headcon do %>
-    <%= stylesheet_link_tag    asset_path("home/pub/team"), :media => "all" %>
+    <%= stylesheet_link_tag    asset_path("home/pub/team.css"), :media => "all" %>
 <% end %>
 
 <div class="splashback">
