--- a/app/views/home/team.html.erb
+++ b/app/views/home/team.html.erb
@@ -1,5 +1,5 @@
 <% content_for :headcon do %>
-    <%= stylesheet_link_tag    asset_path("home/pub/team.css"), :media => "all" %>
+    <%= stylesheet_link_tag    "home/pub/team", :media => "all" %>
 <% end %>
 
 <div class="splashback">
@@ -16,7 +16,7 @@
 
 <div class="container">
 	<div class="whitebox" style="padding:20px">
-		<%= image_tag(asset_path('public/team/eric.jpg'), :style => "width:250px; margin: 0 15px 15px 0; float:left") %>
+		<%= image_tag('public/team/eric.jpg', :style => "width:250px; margin: 0 15px 15px 0; float:left") %>
 
 
 		<div class="miname">
@@ -46,35 +46,35 @@ Life isn't about what you have, it's about what you leave – and I want to leav
 
 
 	<div class="whitebox snapbox" style="padding:20px">
-		<%= image_tag(asset_path('public/team/pai.jpg'), :style => "width:250px; margin: 0 15px 15px 0; float:left") %>
+		<%= image_tag('public/team/pai.jpg', :style => "width:250px; margin: 0 15px 15px 0; float:left") %>
 		<div class="miname">
 			Albert Pai, <span style="color:#999">Hacker</span>
 		</div>
 	</div>
 
 	<div class="whitebox snapbox" style="padding:20px">
-		<%= image_tag(asset_path('public/team/friz.jpg'), :style => "width:250px; margin: 0 15px 15px 0; float:left") %>
+		<%= image_tag('public/team/friz.jpg', :style => "width:250px; margin: 0 15px 15px 0; float:left") %>
 		<div class="miname">
 			Matt Frisbie, <span style="color:#999">Hacker</span>
 		</div>
 	</div>
 
 	<div class="whitebox snapbox" style="padding:20px">
-		<%= image_tag(asset_path('public/team/scott.jpg'), :style => "width:250px; margin: 0 15px 15px 0; float:left") %>
+		<%= image_tag('public/team/scott.jpg', :style => "width:250px; margin: 0 15px 15px 0; float:left") %>
 		<div class="miname">
 			Scott Robinson, <span style="color:#999">BizDev</span>
 		</div>
 	</div>
 
 	<div class="whitebox snapbox" style="padding:20px">
-		<%= image_tag(asset_path('public/team/jordan.jpg'), :style => "width:250px; margin: 0 15px 15px 0; float:left") %>
+		<%= image_tag('public/team/jordan.jpg', :style => "width:250px; margin: 0 15px 15px 0; float:left") %>
 		<div class="miname">
 			Jordan Hamel, <span style="color:#999">Marketing</span>
 		</div>
 	</div>
 
 	<div class="whitebox snapbox" style="padding:20px">
-		<%= image_tag(asset_path('public/team/jack.jpg'), :style => "width:250px; margin: 0 15px 15px 0; float:left") %>
+		<%= image_tag('public/team/jack.jpg', :style => "width:250px; margin: 0 15px 15px 0; float:left") %>
 		<div class="miname">
 			Jack Hanford, <span style="color:#999">Marketing</span>
 		</div>
