--- a/app/assets/stylesheets/home/pub/uwt.css.erb
+++ b/app/assets/stylesheets/home/pub/uwt.css.erb
@@ -1,5 +1,5 @@
 .splashback {
-  background-image: url(/assets/public/uwt.png);
+  background-image: url(<%= asset_path "/assets/public/uwt.png" %>);
   background-repeat:no-repeat;
   background-position:center top; 
   background-color:#fff;
