--- a/app/assets/stylesheets/home/pub/about.css.erb
+++ b/app/assets/stylesheets/home/pub/about.css.erb
@@ -1,5 +1,5 @@
 body {
-  background-image: url(<%= asset_path "/assets/public/product/bg.png" %>) !important;
+  background-image: url(<%= asset_path "/public/product/bg.png" %>) !important;
   background-repeat:no-repeat;
   background-attachment:fixed;
   background-position:center; 
