--- a/app/assets/stylesheets/home/pub/team.css.erb
+++ b/app/assets/stylesheets/home/pub/team.css.erb
@@ -1,5 +1,5 @@
 .splashback {
-  background-image: url(<%= asset_path "/public/team/team.png" %>);
+  background-image: url(<%= asset_path "assets/public/team/team.png" %>);
   background-repeat:no-repeat;
   background-position:center top; 
   background-color:#fff;
