--- a/app/assets/stylesheets/binders/folder.css.erb
+++ b/app/assets/stylesheets/binders/folder.css.erb
@@ -1304,7 +1304,7 @@
 [data-wysihtml5-action]::after,
 .fore-color::after {
   content: "";
-  background-image: url(<%= asset_path "/assets/binders/wytb.png" %>);
+  background-image: url(<%= asset_path "binders/wytb.png" %>);
   background-repeat: no-repeat;
   position: absolute;
   left: 0;
