--- a/app/assets/stylesheets/devise/apply.css.erb
+++ b/app/assets/stylesheets/devise/apply.css.erb
@@ -1,5 +1,5 @@
 .splashback {
-  background-image: url(/assets/public/devise/applybk.png);
+  background-image: url(<%= asset_path "public/devise/applybk.png" %>);
   background-repeat:no-repeat;
   background-position:center top; 
   background-color:#fff;
