--- a/app/assets/stylesheets/strap.css.erb
+++ b/app/assets/stylesheets/strap.css.erb
@@ -164,7 +164,7 @@ body {
   line-height: 18px;
   color: #333333;
   background-color: #F6F6F6;
-  background: #F7F5F5 url(/assets/paper.jpg) repeat;
+  background: #F7F5F5 url(<%= asset_path "paper.jpg" %>) repeat;
   padding-top: 54px;
   padding-bottom: 40px;
 }
@@ -1780,7 +1780,7 @@ table .span24 {
   *margin-right: .3em;
   line-height: 14px;
   vertical-align: text-top;
-  background-image: url("../img/glyphicons-halflings.png");
+  /*background-image: url("../img/glyphicons-halflings.png");*/
   background-position: 14px 14px;
   background-repeat: no-repeat;
 }
@@ -1791,7 +1791,7 @@ table .span24 {
 }
 
 .icon-white {
-  background-image: url("../img/glyphicons-halflings-white.png");
+  /*background-image: url("../img/glyphicons-halflings-white.png");*/
 }
 
 .icon-glass {
