--- a/app/assets/stylesheets/teacher.css.erb
+++ b/app/assets/stylesheets/teacher.css.erb
@@ -196,7 +196,7 @@ ul.nav-tabs.onProfile a:hover {
 }
 
 ul.nav-tabs.onProfile li.active a {
-  background: url(/assets/paper.jpg) repeat;
+  background: url(<%= asset_path "paper.jpg" %>) repeat;
   border-radius: 5px 5px 0 0;
   border: 1px solid #ddd;
   border-bottom: none;
