--- a/app/assets/stylesheets/widgets/icheck.css.erb
+++ b/app/assets/stylesheets/widgets/icheck.css.erb
@@ -35,7 +35,7 @@
 
 label.iPhoneCheckLabelOn {
   color: white;
-  background: url('/assets/icheck/on.png') no-repeat;
+  background: url(<%= asset_path "icheck/on.png" %>) no-repeat;
   text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.6);
   left: 0;
   padding-top: 5px; }
@@ -43,7 +43,7 @@ label.iPhoneCheckLabelOn {
     padding-left: 8px; }
 label.iPhoneCheckLabelOff {
   color: white;
-  background: url('/assets/icheck/off.png') no-repeat right 0;
+  background: url(<%= asset_path "icheck/off.png" %>) no-repeat right 0;
   text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.6);
   text-align: right;
   right: 0; }
@@ -58,19 +58,19 @@ label.iPhoneCheckLabelOff {
   top: 0;
   left: 0;
   width: 0;
-  background: url('/assets/icheck/slider_left.png') no-repeat;
+  background: url(<%= asset_path "icheck/slider_left.png" %>) no-repeat;
   padding-left: 3px; }
 
 .iPhoneCheckHandleRight {
   height: 100%;
   width: 100%;
   padding-right: 3px;
-  background: url('/assets/icheck/slider_right.png') no-repeat right 0; }
+  background: url(<%= asset_path "icheck/slider_right.png" %>) no-repeat right 0; }
 
 .iPhoneCheckHandleCenter {
   height: 100%;
   width: 100%;
-  background: url('/assets/icheck/slider_center.png'); }
+  background: url(<%= asset_path "icheck/slider_center.png" %>); }
 
 .iOSCheckContainer {
   position: relative;
@@ -108,7 +108,7 @@ label.iPhoneCheckLabelOff {
 
 label.iOSCheckLabelOn {
   color: white;
-  background: url('/assets/icheck/on.png') no-repeat;
+  background: url(<%= asset_path "icheck/on.png" %>) no-repeat;
   text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.6);
   left: 0;
   padding-top: 5px; }
@@ -116,7 +116,7 @@ label.iOSCheckLabelOn {
     padding-left: 8px; }
 label.iOSCheckLabelOff {
   color: white;
-  background: url('/assets/icheck/off.png') no-repeat right 0;
+  background: url(<%= asset_path "icheck/off.png" %>) no-repeat right 0;
   text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.6);
   text-align: right;
   right: 0; }
@@ -131,16 +131,16 @@ label.iOSCheckLabelOff {
   top: 0;
   left: 0;
   width: 0;
-  background: url('/assets/icheck/slider_left.png') no-repeat;
+  background: url(<%= asset_path "icheck/slider_left.png" %>) no-repeat;
   padding-left: 3px; }
 
 .iOSCheckHandleRight {
   height: 100%;
   width: 100%;
   padding-right: 3px;
-  background: url('/assets/icheck/slider_right.png') no-repeat right 0; }
+  background: url(<%= asset_path "icheck/slider_right.png" %>) no-repeat right 0; }
 
 .iOSCheckHandleCenter {
   height: 100%;
   width: 100%;
-  background: url('/assets/icheck/slider_center.png'); }
+  background: url(<%= asset_path "icheck/slider_center.png" %>); }
