Compress images to jpg

--- a/app/assets/stylesheets/home/pub/uwt.css.erb
+++ b/app/assets/stylesheets/home/pub/uwt.css.erb
@@ -1,5 +1,5 @@
 .splashback {
-  background-image: url(<%= asset_path "public/uwt.png" %>);
+  background-image: url(<%= asset_path "public/uwt.jpg" %>);
   background-repeat:no-repeat;
   background-position:center top; 
   background-color:#fff;
